--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,6 +7,7 @@
   font-family: 'iciel-cadena';
   src: url(../../public/assets/fonts/iCielCadena.otf);
 }
+
 a {
   @apply text-blue-700;
 }
@@ -14,6 +15,7 @@ a {
 a:hover {
   @apply border-b-2 border-blue-700;
 }
+
 .content p {
   @apply my-6;
 }
@@ -25,7 +27,7 @@ a:hover {
 .text-cyellow {
   color: #ffcb1f;
   font-weight: 700;
-  font-size: 50px;  
+  font-size: 50px;
 }
 
 .text-content {
@@ -34,10 +36,11 @@ a:hover {
   font-size: 20px;
 }
 
-.w-100{
+.w-100 {
   width: 100%;
 }
-.max-w14{
+
+.max-w14 {
   max-width: 14rem;
 }
 
@@ -49,7 +52,11 @@ body {
   font-size: 22px;
 }
 
-h1, h2, h3, h4, h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
   font-family: 'iciel-cadena';
   color: white;
 }
@@ -58,6 +65,79 @@ h1 {
   font-size: 80px;
 }
 
-h2 {
-  
+h2 {}
+
+.page-container {
+  width: 100vw;
+  height: 100vh;
+}
+
+// common animations
+@keyframes ShowDownKeyFrames {
+  0% {
+    transform: translateY(-50vh);
+    opacity: 0;
+  }
+
+  50% {
+    transform: translateY(3rem);
+    opacity: 1;
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes ShowUpKeyFrames {
+  0% {
+    transform: translateY(30vh);
+    opacity: 0;
+  }
+
+  50% {
+    transform: translateY(-3rem);
+    opacity: 1;
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.show-down-anima {
+  animation: ShowDownKeyFrames 0.5s, 0.05s;
+  animation-timing-function: ease-out;
+}
+
+.show-up-anima {
+  animation: ShowUpKeyFrames 0.5s, 0.05s;
+  animation-timing-function: ease-out;
+}
+
+// end common animations
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #AAA;
+  border-radius: 10px;
+}
+
+button {
+  transition: all 100ms;
+  &:hover {
+    filter: brightness(1.2);
+  } 
+  &:active {
+    filter: brightness(0.8);
+  }
 }
