--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -47,7 +47,7 @@ a:hover {
 body {
   font-family: 'iciel-cadena';
   background-position: center;
-  background-image: url(../../public/assets/images/BG.png);
+  background-image: url(../../public/assets/images/v2/backb1.png);
   background-size: cover;
   font-size: 22px;
 }
@@ -141,3 +141,6 @@ button {
     filter: brightness(0.8);
   }
 }
+// .modal-header{
+//   background-color: red !important;
+// }
