feat: update style modal

--- a/src/components/modal/modal.module.scss
+++ b/src/components/modal/modal.module.scss
@@ -1,7 +1,7 @@
 .modal-common {
     .custom-modal-header {
         background-color: red !important;
-        background-image: url(../../../public/assets/images/v2/popup_login.png);
+        // background-image: url(../../../public/assets/images/v2/popup_login.png);
     }
     .custom-modal-content {
         background-image: url(../../../public/assets/images/v2/popup_login.png);
