--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,7 +4,7 @@
 @import "~bootstrap/scss/bootstrap";
 
 @font-face {
-  font-family: 'iciel-cadena';
+  font-family: "iciel-cadena";
   src: url(../../public/assets/fonts/iCielCadena.otf);
 }
 
@@ -45,7 +45,7 @@ a:hover {
 }
 
 body {
-  font-family: 'iciel-cadena';
+  font-family: "iciel-cadena";
   background-position: center;
   background-image: url(../../public/assets/images/v2/backb1.png);
   background-size: cover;
@@ -57,7 +57,7 @@ h2,
 h3,
 h4,
 h5 {
-  font-family: 'iciel-cadena';
+  font-family: "iciel-cadena";
   color: white;
 }
 
@@ -65,7 +65,8 @@ h1 {
   font-size: 80px;
 }
 
-h2 {}
+h2 {
+}
 
 .page-container {
   width: 100vw;
@@ -119,16 +120,16 @@ h2 {}
 
 ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
 }
 
 ::-webkit-scrollbar {
   width: 10px;
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #AAA;
+  background-color: #aaa;
   border-radius: 10px;
 }
 
@@ -136,11 +137,34 @@ button {
   transition: all 100ms;
   &:hover {
     filter: brightness(1.2);
-  } 
+  }
   &:active {
     filter: brightness(0.8);
   }
 }
-// .modal-header{
-//   background-color: red !important;
-// }
+
+// custom boostrapse modal
+.modal-content {
+  background-image: url(../../public/assets/images/v2/modal_content.png);
+  background-size: cover;
+  background-position: center;
+  background-color: transparent;
+  border: 0px;
+  .modal-header {
+    margin-top: 4vh;
+    align-items: baseline;
+    border-bottom: 0px;
+    .modal-title{
+      padding-left: 20vh;;
+    }
+  }
+  form {
+    padding-top: 8vh;
+    width: 48vh;
+    padding-left: 4vh;
+    min-height: 53vh;
+  }
+  .modal-footer{
+    border-top:0px;
+  }
+}
