--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -65,8 +65,7 @@ h1 {
   font-size: 80px;
 }
 
-h2 {
-}
+h2 {}
 
 .page-container {
   width: 100vw;
@@ -135,9 +134,11 @@ h2 {
 
 button {
   transition: all 100ms;
+
   &:hover {
     filter: brightness(1.2);
   }
+
   &:active {
     filter: brightness(0.8);
   }
@@ -146,25 +147,19 @@ button {
 // custom boostrapse modal
 .modal-content {
   background-image: url(../../public/assets/images/v2/modal_content.png);
-  background-size: cover;
+  background-size: contain;
   background-position: center;
   background-color: transparent;
+  background-repeat: no-repeat;
   border: 0px;
+  height: 650px;
+
   .modal-header {
-    margin-top: 4vh;
     align-items: baseline;
     border-bottom: 0px;
-    .modal-title{
-      padding-left: 20vh;;
-    }
   }
-  form {
-    padding-top: 8vh;
-    width: 48vh;
-    padding-left: 4vh;
-    min-height: 53vh;
-  }
-  .modal-footer{
-    border-top:0px;
+
+  .modal-footer {
+    border-top: 0px;
   }
 }
