feat: update code merge locnt

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -153,28 +153,46 @@ button {
   background-repeat: no-repeat;
   border: 0px;
   height: 650px;
-  width: 57vh;
+
   .modal-header {
     align-items: baseline;
     border-bottom: 0px;
-    display: flex;
-    flex-direction: column-reverse;
-    .modal-title{
-      padding: 2vh 0 0 20vh;
-      
-    }
-    .btn-close{
-      background: transparent;
-    }
-  }
-  form {
-    padding-top: 8vh;
-    width: 48vh;
-    padding-left: 4vh;
-    min-height: 53vh;
   }
 
   .modal-footer {
     border-top: 0px;
   }
 }
+// .modal-content {
+//   background-image: url(../../public/assets/images/v2/modal_content.png);
+//   background-size: contain;
+//   background-position: center;
+//   background-color: transparent;
+//   background-repeat: no-repeat;
+//   border: 0px;
+//   height: 650px;
+//   width: 57vh;
+//   .modal-header {
+//     align-items: baseline;
+//     border-bottom: 0px;
+//     display: flex;
+//     flex-direction: column-reverse;
+//     .modal-title{
+//       padding: 2vh 0 0 20vh;
+      
+//     }
+//     .btn-close{
+//       background: transparent;
+//     }
+//   }
+//   form {
+//     padding-top: 8vh;
+//     width: 48vh;
+//     padding-left: 4vh;
+//     min-height: 53vh;
+//   }
+
+//   .modal-footer {
+//     border-top: 0px;
+//   }
+// }
