--- a/src/components/loading/loading.module.scss
+++ b/src/components/loading/loading.module.scss
@@ -1,5 +1,3 @@
-
-
 .container {
     width: 100vw;
     height: 100vh;
@@ -9,7 +7,7 @@
     z-index: 1;
     display: flex;
     justify-content: center;
-    align-items: end;
+    align-items: flex-end;
     background: #25295199;
     .progress {
 	background-color: #5C5C5B;
