--- a/src/pages/dashboard/dashboard.module.scss
+++ b/src/pages/dashboard/dashboard.module.scss
@@ -1,10 +1,10 @@
-
 .dashboard-container {
   font-size: 22px;
   padding: 1rem;
-  
+
   .infor-item {
     border-radius: 50px;
+
     &:hover {
       background: #afd5ff6e;
     }
@@ -37,9 +37,18 @@
       background-image: url(../../../public/assets/images/khung1.png);
       filter: brightness(2.3) saturate(0.3) contrast(1.5) opacity(0.3);
     }
+
     &:hover {
       transform: translateY(-5px);
       filter: brightness(1.15);
     }
+  }
+
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    .left {}
   }
 }
